--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,6 @@
 PORT = 8050
 DEV_MODE = development
-MONGO_URL =mongodb://localhost:27017/ecommerce
+MONGO_URL =mongodb+srv://Naresh9313:Naresh9313@cluster0.qllnrkw.mongodb.net/PracticalExam
 JWT_SECRET = HGFHGEAD1212432432
 BRAINTREE_MERCHANT_ID=tx5vp6zf3vt77cy8
 BRAINTREE_PUBLIC_KEY=vxntc2jzy74pv7gb
